@@ -1,9 +1,5 @@
-DIST sagan-rules-08222010-r1.tar.gz 39478 RMD160 9fdf81fde7b4b8e58021dba68d48dd55ee5d2496 SHA1 e4b73d25034229ca1f6e1af5d08745e3c2aafaaa SHA256 ea273a33ae4dc4f5362177d015415e210e33442232ca1b54398a8716cffcd345
-DIST sagan-rules-10052010-r1.tar.gz 40583 RMD160 da7f61c525d321ad588d4a330bf6396098e1e226 SHA1 3ec2fb9b05b6d2973e24753675887d83afdc01e1 SHA256 390c2a83ed8827fb55843f425e77e63f3131f94e21428d733c3e7e6653725b98
 DIST sagan-rules-10212010-r1.tar.gz 41311 RMD160 a385d6cfb13c10d4603ed2dfb1ac3b37f98d0b93 SHA1 76d37c44c0cd825c0ba5787f1b8bea6f600f96df SHA256 df4753c55f45165df1a989dd78ac65f3af62bfec7ae56f44b22e266f5d0ce0bb
-EBUILD sagan-rules-08222010-r1.ebuild 478 RMD160 0307a1dce78c113810bd105b37b96a4530fc99b0 SHA1 ce09cf149760af676219552d85a00ff49d8e7a97 SHA256 d50c7b32677ee136a5dbf64eb414e108ee8f61950eea824beabd8b2775559ef2
-EBUILD sagan-rules-10052010.ebuild 478 RMD160 0307a1dce78c113810bd105b37b96a4530fc99b0 SHA1 ce09cf149760af676219552d85a00ff49d8e7a97 SHA256 d50c7b32677ee136a5dbf64eb414e108ee8f61950eea824beabd8b2775559ef2
 EBUILD sagan-rules-10212010.ebuild 478 RMD160 0307a1dce78c113810bd105b37b96a4530fc99b0 SHA1 ce09cf149760af676219552d85a00ff49d8e7a97 SHA256 d50c7b32677ee136a5dbf64eb414e108ee8f61950eea824beabd8b2775559ef2
 EBUILD sagan-rules-9999.ebuild 487 RMD160 4ff0a085221e9c2f6f0eb336486c6bf7bb01f832 SHA1 c2319f66952cc352d7e265859fee7fe697d51f7a SHA256 6746ca37f00c2d96f5b6c60a603af1a78384ec8abe6bcddbdee0a6b8573d9d8c
-MISC ChangeLog 1038 RMD160 552fe3a488a0185169f9898cbe89d738bde4fcf9 SHA1 2a7ae65ddee1bbaf1505beb85665885c9e1617bc SHA256 6775f23e721ec0628c6f0d69dbcca3b37250ce200ffa93e17c44db76b2a669b7
+MISC ChangeLog 1175 RMD160 10f19d54b05953f3588fd88e3e6ac8aa1c0d5c63 SHA1 4a8f3a1cd193dc2240c3b1729c3a5bd1be5199dd SHA256 d8efa1aea6a8f5b5f8ea59ff4debae614f50428ed312eeab9e5ee12430013d62
 MISC metadata.xml 294 RMD160 3becd35eb8c3898df5bcd56f23dc0d0fa9c2e535 SHA1 0249961381ab06383c1e451de98a165339f90929 SHA256 7c29ba7ae2db5f186cb79a74215ea939261839df489d0965888d55f93864689a
