@@ -1,26 +1,0 @@
-# Copyright 1999-2010 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: $
-
-EAPI=3
-
-DESCRIPTION="Rules for Sagan log analizer"
-HOMEPAGE="http://sagan.softwink.com/"
-SRC_URI="http://sagan.softwink.com/rules/${P}-r1.tar.gz"
-
-LICENSE="BSD"
-SLOT="0"
-KEYWORDS="~amd64 ~x86"
-IUSE=""
-
-DEPEND=""
-RDEPEND="${DEPEND}"
-PDEPEND="app-admin/sagan"
-
-S=${WORKDIR}/rules
-
-src_install() {
-	insinto /etc/sagan-rules
-	doins ./*.config
-	doins ./*rules
-}
